--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Brush+Script+MT&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Brush+Script+MT&family=Dancing+Script&display=swap');
 @import "tailwindcss";
 
+
+:root  {
+    
+    --font-artistic : 'Dancing Script', cursive;
+    --font-brush: 'Brush Script MT', cursive;
+}
+
+body {
+    font-family: var(--font-sans);
+}
